--- a/WeekendCode/style.css
+++ b/WeekendCode/style.css
@@ -3,15 +3,35 @@
  padding:0px;
  box-sizing: border-box;
 }
-.menu{
-    height: 80px;
+nav{
+    height: 60px;
     background-color: rgb(7, 0, 104);
 }
-.menu button{
-    color:white;
-    background-color: rgb(7, 0, 104);
+.home{
+    margin:20px;
+}
+.home img{
+    padding-top: 10px;
+}
+ul{
+    display:inline-flex;
+    flex-direction: row-reverse;
+}
+nav li{
     display: inline;
-    padding: 5px;
-    border: transparent;
+    vertical-align: top;
+}
+
+.linea{
+    padding: 20px 10px;
+}
+nav .linea a{
+    color: rgb(0, 0, 0);
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+    text-decoration: none;
+} 
+nav .linea:hover{
+    background-color: rgba(255, 255, 255, 0.3);
+    color: rgb(7, 132, 204);
 }
