--- a/WeekendCode/css/style.css
+++ b/WeekendCode/css/style.css
@@ -35,3 +35,17 @@ nav .linea:hover{
     background-color: rgba(255, 255, 255, 0.3);
     color: rgb(7, 132, 204);
 }
+
+/* juegos html */
+.juegos{
+    text-align: center;
+}
+h1{
+    margin-top:50px;
+    font-family: arial;
+    font-size: 30px;
+}
+h2{
+    font-family: arial;
+    font-size: 24px;
+}
