--- a/WeekendCode/css/style.css
+++ b/WeekendCode/css/style.css
@@ -3,9 +3,16 @@
  padding:0px;
  box-sizing: border-box;
 }
+body{
+    height: 800px;
+    background: linear-gradient(to bottom, blue, #2eceff);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
 nav{
     height: 60px;
-    background-color: rgb(7, 0, 104);
+    background-color:transparent
 }
 .home{
     display: inline-block;
@@ -30,20 +37,32 @@ nav li{
 }
 nav .linea a{
     color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
     font-size: 20px;
     text-decoration: none;
 } 
 nav .linea:hover{
     background-color: rgba(255, 255, 255, 0.3);
-    color: rgb(7, 132, 204);
+}
+.encabezado{
+    text-align: center;
+    color:white;
+    font-family: Arial;
+}
+.encabezado h1{
+    font-size: 40px;
+    margin-top: 50px;
+}
+.encabezado p{
+    margin: 50px;
+    font-size: 25px;
 }
 
+/* memorice html */
 #game {
     width: 900px; 
     margin: 0 auto;
 }
-
 .card {
     background: url("../images/carta.png");
 	background-repeat: no-repeat;
@@ -57,13 +76,17 @@ nav .linea:hover{
 /* juegos html */
 .juegos{
     text-align: center;
+    color: white;
 }
-h1{
+.juegos h1{
     margin-top:50px;
     font-family: arial;
     font-size: 30px;
 }
-h2{
+.juegos img{
+    margin-top: 100px;
+}
+.juegos h2{
     font-family: arial;
     font-size: 24px;
 }
