--- a/WeekendCode/css/style.css
+++ b/WeekendCode/css/style.css
@@ -79,10 +79,43 @@ nav .linea:hover{
     font-family: arial;
     font-size: 30px;
 }
-.juegos img{
+.contenedor{
+    display: inline-block;
+}
+.contenedor img{
+    display: inline;
     margin-top: 100px;
 }
-.juegos h2{
+.contenedor h2{
     font-family: arial;
     font-size: 24px;
+}
+
+/* puzzle html */
+h1{
+    font-family: arial;
+    text-align: center;
+    color:white;
+    margin-top: 20px;
+}
+.paisaje{
+    margin-top: 40px;
+    width: 100%;
+    padding-bottom: 10px;
+    background-color: white;
+    /* display:inline-flex;
+    flex-direction: row;
+    justify-content: flex-end; */
+}
+#fondo{
+    opacity: 0.55;
+}
+h1{
+    color:white;
+    font-family: arial;
+    text-align: center;
+}
+#recuadro{
+    display: block;
+    margin: 0 auto;
 }
