--- a/WeekendCode/css/style.css
+++ b/WeekendCode/css/style.css
@@ -53,7 +53,7 @@ nav .linea:hover{
     margin-top: 50px;
 }
 .botoniz{
-    margin-top: 100px;
+    margin-top: 80px;
     width: 400px;
     display: inline-block;
     text-align: center;
@@ -61,7 +61,7 @@ nav .linea:hover{
     color:white;
 }
 .botonder{
-    margin-top: 100px;
+    margin-top: 80px;
     width: 400px;
     display: inline-block;
     text-align: center;
@@ -144,4 +144,13 @@ nav .linea:hover{
     margin: 0 auto;
 }
 /* lectura html */
+.lectura{
+    text-align: center;
+    font-family: arial;
+    text-align: center;
+    color:white;
+}
+.lectura h1{
+    margin-top: 15px;
+}
 
